--- a/demo/demo.css
+++ b/demo/demo.css
@@ -18,9 +18,15 @@ button {
 .status {
   font-weight: bold;
 }
+.controls {
+  padding-top: 64px;
+}
 
 @media (max-width: 1440px) {
   body {
     flex-direction: column;
+  }
+  .controls {
+    padding-top: 0px;
   }
 }
